swagger.json fixed
